Add header html conntent and rest style

--- a/index.html
+++ b/index.html
@@ -5,11 +5,97 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="fontawesome/css/all.css">
     <title>Document</title>
 </head>
 
 <body>
-
+    <header class="site-header">
+        <section class="nav-socialmedia">
+            <span class="line-decoration"></span>
+            <nav class="nav-socialmedia_content">
+                <ul class="nav-socialmedia-actions">
+                    <li class="nav-socialmedia-action">
+                        <button class="nav-socialmedia-trigger">
+                            <span><i class="fab fa-twitter"></i></span>
+                        </button>
+                    </li>
+                    <li class="nav-socialmedia-action">
+                        <button class="nav-socialmedia-trigger">
+                            <span><i class="fab fa-facebook-f"></i></span>
+                        </button>
+                    </li>
+                    <li class="nav-socialmedia-action">
+                        <button class="nav-socialmedia-trigger">
+                            <span><i class="fab fa-google-plus-g"></i></span>
+                        </button>
+                    </li>
+                    <li class="nav-socialmedia-action">
+                        <button class="nav-socialmedia-trigger">
+                            <span><i class="fab fa-instagram"></i></span>
+                        </button>
+                    </li>
+                </ul>
+            </nav>
+        </section>
+        <section class="welcome-info">
+            <section class="welcome-info_content">
+                <h2>Welcome </br> to the world of photo</h2>
+                <h3>Agotert of my work amet,consectetur </br> adipisicing elit, sed do eiusmod tempor incididunt </h3>
+            </section>
+            <section class="welcome-info_button">
+                <article class="welcome-info_more-button">
+                    <button class="welcome-info_more-trigger">
+                        Read more
+                    </button>
+                </article>
+                <article class="welcome-info_line">
+                    <span class="welcome-info_line-decoration"></span>
+                </article>
+            </section>
+        </section>
+        <section class="nav-user">
+            <h1 class="nav-user_logo">
+                <a class="nav-user_logo-trigger">
+                    <img src="images/logo/logo.png" alt="logo" />
+                </a>
+            </h1>
+            <nav class="nav-user_content">
+                <ul class="nav-user_actions">
+                    <li class="nav-user_action">
+                        <a class="nav-user_trigger">
+                            Home
+                        </a>
+                    </li>
+                    <li class="nav-user_action">
+                        <a class="nav-user_trigger">
+                            About me
+                        </a>
+                    </li>
+                    <li class="nav-user_action">
+                        <a class="nav-user_trigger">
+                            Portfolio
+                        </a>
+                    </li>
+                    <li class="nav-user_action">
+                        <a class="nav-user_trigger">
+                            Services
+                        </a>
+                    </li>
+                    <li class="nav-user_action">
+                        <a class="nav-user_trigger">
+                            Blog
+                        </a>
+                    </li>
+                    <li class="nav-user_action">
+                        <a class="nav-user_trigger">
+                            Contact
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </section>
+    </header>
 </body>
 
 </html>
