Add style respo - small version nav socialmedia

--- a/index.html
+++ b/index.html
@@ -13,32 +13,29 @@
     <header class="site-header">
         <section class="nav-socialmedia">
             <span class="line-decoration"></span>
-            <nav class="nav-socialmedia_content">
-                <ul class="nav-socialmedia-actions">
-                    <li class="nav-socialmedia-action">
-                        <button class="nav-socialmedia-trigger">
-                            <span><i class="fab fa-twitter"></i></span>
-                        </button>
+            <section class="nav-socialmedia_logo">
+                <a class="nav-socialmedia_logo-trigger">
+                    <img src="images/logo/logo.png" alt="logo" class=".nav-socialmedia_logo-img" />
+                </a>
+            </section>
+            <nav class=" nav-socialmedia_content">
+                <ul class="nav-socialmedia_actions">
+                    <li class="nav-socialmedia_action">
+                        <span><i class="fab fa-twitter"></i></span>
                     </li>
-                    <li class="nav-socialmedia-action">
-                        <button class="nav-socialmedia-trigger">
-                            <span><i class="fab fa-facebook-f"></i></span>
-                        </button>
+                    <li class="nav-socialmedia_action">
+                        <span><i class="fab fa-facebook-f"></i></span>
                     </li>
-                    <li class="nav-socialmedia-action">
-                        <button class="nav-socialmedia-trigger">
-                            <span><i class="fab fa-google-plus-g"></i></span>
-                        </button>
+                    <li class="nav-socialmedia_action">
+                        <span><i class="fab fa-google-plus-g"></i></span>
                     </li>
-                    <li class="nav-socialmedia-action">
-                        <button class="nav-socialmedia-trigger">
-                            <span><i class="fab fa-instagram"></i></span>
-                        </button>
+                    <li class="nav-socialmedia_action">
+                        <span><i class="fab fa-instagram"></i></span>
                     </li>
                 </ul>
             </nav>
         </section>
-        <section class="welcome-info">
+        <!-- <section class="welcome-info">
             <section class="welcome-info_content">
                 <h2>Welcome </br> to the world of photo</h2>
                 <h3>Agotert of my work amet,consectetur </br> adipisicing elit, sed do eiusmod tempor incididunt </h3>
@@ -53,8 +50,11 @@
                     <span class="welcome-info_line-decoration"></span>
                 </article>
             </section>
-        </section>
-        <section class="nav-user">
+        </section> -->
+        <!-- <section class="nav-user">
+             <span class="nav-trigger">
+                <i class="fas fa-bars"></i>
+            </span>
             <h1 class="nav-user_logo">
                 <a class="nav-user_logo-trigger">
                     <img src="images/logo/logo.png" alt="logo" />
@@ -94,7 +94,7 @@
                     </li>
                 </ul>
             </nav>
-        </section>
+        </section> -->
     </header>
 </body>
 
