Add style header, nav socialmedia - small mobile

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="fontawesome/css/all.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+        rel="stylesheet" />
     <title>Document</title>
 </head>
 
@@ -13,11 +16,10 @@
     <header class="site-header">
         <section class="nav-socialmedia">
             <span class="line-decoration"></span>
-            <section class="nav-socialmedia_logo">
-                <a class="nav-socialmedia_logo-trigger">
-                    <img src="images/logo/logo.png" alt="logo" class=".nav-socialmedia_logo-img" />
-                </a>
-            </section>
+            <span class="nav-trigger">
+                <i class="fas fa-bars"></i>
+            </span>
+
             <nav class=" nav-socialmedia_content">
                 <ul class="nav-socialmedia_actions">
                     <li class="nav-socialmedia_action">
@@ -35,10 +37,10 @@
                 </ul>
             </nav>
         </section>
-        <!-- <section class="welcome-info">
+        <section class="welcome-info">
             <section class="welcome-info_content">
                 <h2>Welcome </br> to the world of photo</h2>
-                <h3>Agotert of my work amet,consectetur </br> adipisicing elit, sed do eiusmod tempor incididunt </h3>
+                <p>Agotert of my work amet,consectetur </br> adipisicing elit, sed do eiusmod tempor incididunt </p>
             </section>
             <section class="welcome-info_button">
                 <article class="welcome-info_more-button">
@@ -50,7 +52,7 @@
                     <span class="welcome-info_line-decoration"></span>
                 </article>
             </section>
-        </section> -->
+        </section>
         <!-- <section class="nav-user">
              <span class="nav-trigger">
                 <i class="fas fa-bars"></i>
