Add style menu - small mobile

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                 </article>
             </section>
         </section>
-        <!-- <section class="nav-user">
-             <span class="nav-trigger">
+        <section class="nav-user">
+            <span class="nav-trigger">
                 <i class="fas fa-bars"></i>
             </span>
             <h1 class="nav-user_logo">
@@ -96,7 +96,7 @@
                     </li>
                 </ul>
             </nav>
-        </section> -->
+        </section>
     </header>
 </body>
 
